Updated to use cmake-modules as a subproject and fixed documentation generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,14 +3,26 @@ cmake_minimum_required(VERSION 3.11.4)
 # Define the project
 project(cpp LANGUAGES CXX)
 
-# Get CMake modules from Git
-include(FetchContent)
-FetchContent_Declare(cmake-modules
-  GIT_REPOSITORY https://github.com/tnt-coders/cmake-modules.git
-  GIT_TAG main
-)
-FetchContent_MakeAvailable(cmake-modules)
+# Find dependencies
+find_package(Doxygen)
 
+if (${DOXYGEN_FOUND})
+    set(DOXYGEN_EXTRACT_ALL YES)
+    set(DOXYGEN_GENERATE_TREEVIEW YES)
+    set(DOXYGEN_USE_MDFILE_AS_MAINPAGE ${PROJECT_SOURCE_DIR}/README.md)
+
+    # Get the list of subprojects
+    file(GLOB SUBPROJECTS cmake-* cpp-*)
+
+    # Add target to generate doxygen documentation
+    doxygen_add_docs(doxygen
+        ${PROJECT_SOURCE_DIR}/README.md
+        ${SUBPROJECTS}
+        COMMENT "Generating documentation..."
+    )
+endif()
+
+add_subdirectory(cmake-modules)
 add_subdirectory(cpp-audio)
 add_subdirectory(cpp-benchmark)
 add_subdirectory(cpp-dsp)
